// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`insert() compile: query-http 1`] = `"INSERT RELATION IGNORE $bind__3 RETURN DIFF VERSION $bind__4 TIMEOUT 1s"`;

exports[`insert() compile: bindings-http 1`] = `
{
  "bind__3": [
    {
      "firstname": "John",
      "id": RecordId {
        [Symbol(surrealdb.RecordId)]: true,
        [Symbol(surrealdb.Value)]: true,
      },
      "lastname": "Doe",
    },
  ],
  "bind__4": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`insert() compile: query-ws 1`] = `"INSERT RELATION IGNORE $bind__4 RETURN DIFF VERSION $bind__5 TIMEOUT 1s"`;

exports[`insert() compile: bindings-ws 1`] = `
{
  "bind__4": [
    {
      "firstname": "John",
      "id": RecordId {
        [Symbol(surrealdb.RecordId)]: true,
        [Symbol(surrealdb.Value)]: true,
      },
      "lastname": "Doe",
    },
  ],
  "bind__5": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`insert() compile: query-mem 1`] = `"INSERT RELATION IGNORE $bind__3 RETURN DIFF VERSION $bind__4 TIMEOUT 1s"`;

exports[`insert() compile: bindings-mem 1`] = `
{
  "bind__3": [
    {
      "firstname": "John",
      "id": RecordId {
        [Symbol(surrealdb.RecordId)]: true,
        [Symbol(surrealdb.Value)]: true,
      },
      "lastname": "Doe",
    },
  ],
  "bind__4": DateTime {
    [Symbol(surrealdb.DateTime)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;
